feat: add get profile limit
